# dify-official-plugins

./: .difyignore  .gitignore  AmazonQ.md  DEVELOPMENT.md  Makefile  PR_BODY.md  PR_DESCRIPTION.md  README.md  gemini.difypkg  main.py  moonshot.difypkg  openrouter.difypkg  pyproject.toml  pyrightconfig.json  test_unsplash_key.py
datasources/aws_s3_storage/: .difyignore  README.md  manifest.yaml  pyproject.toml  requirements.txt
datasources/aws_s3_storage/datasources/: aws_s3_storage.py  aws_s3_storage.yaml
datasources/aws_s3_storage/provider/: aws_s3_storage.py  aws_s3_storage.yaml
datasources/azure_blob/: .difyignore  PRIVACY.md  README.md  ai_review.md  manifest.yaml  pyproject.toml  requirements.txt
datasources/azure_blob/datasources/: azure_blob.py  azure_blob.yaml
datasources/azure_blob/provider/: azure_blob.py
datasources/confluence_datasource/: manifest.yaml  pyproject.toml  requirements.txt
datasources/confluence_datasource/datasources/: confluence_datasource.py  confluence_datasource.yaml
datasources/confluence_datasource/provider/: confluence_datasource.py  confluence_datasource.yaml
datasources/dropbox_datasource/: manifest.yaml  pyproject.toml  requirements.txt
datasources/dropbox_datasource/datasources/: dropbox.yaml
datasources/dropbox_datasource/provider/: dropbox.py  dropbox.yaml
datasources/github/: PRIVACY.md  README.md  ai_review.md  manifest.yaml  pyproject.toml  requirements.txt
datasources/github/datasources/: github.py  github.yaml
datasources/github/provider/: github.py  github.yaml
datasources/gitlab_datasource/: manifest.yaml  pyproject.toml  requirements.txt
datasources/gitlab_datasource/datasources/: gitlab.yaml
datasources/gitlab_datasource/provider/: gitlab.py  gitlab.yaml
datasources/google_cloud_storage/: README.md  manifest.yaml  pyproject.toml  requirements.txt
datasources/google_cloud_storage/datasources/: google_cloud_storage.py  google_cloud_storage.yaml
datasources/google_cloud_storage/provider/: google_cloud_storage.py  google_cloud_storage.yaml
datasources/google_drive/: README.md  manifest.yaml  pyproject.toml  requirements.txt
datasources/google_drive/datasources/: google_drive.py  google_drive.yaml
datasources/google_drive/provider/: google_drive.py  google_drive.yaml
datasources/sharepoint_datasource/: PRIVACY.md  README.md  manifest.yaml  pyproject.toml
datasources/sharepoint_datasource/datasources/: docs_in_site.py  sharepoint.yaml
datasources/sharepoint_datasource/provider/: sharepoint.py  sharepoint.yaml
datasources/sharepoint_datasource/tests/: conftest.py  test_oauth_tenant.py
extensions/aws_bedrock_knowledge_base/: BEDROCK_MANAGED_KB.md  README.md  manifest.yaml  pyproject.toml  requirements.txt
extensions/aws_bedrock_knowledge_base/endpoints/: aws_bedrock_knowledge_base.py
extensions/aws_bedrock_knowledge_base/provider/: aws_bedrock_knowledge_base.yaml
extensions/aws_bedrock_knowledge_base/tests/: test_aws_bedrock_knowledge_base.py
extensions/slack_bot/: README.md  manifest.yaml  pyproject.toml  requirements.txt
extensions/slack_bot/endpoints/: slack.py  slack.yaml  slack_debug.py
extensions/slack_bot/group/: slack.yaml
extensions/wecom_bot/: README.md  manifest.yaml  pyproject.toml  requirements.txt
extensions/wecom_bot/endpoints/: wecom.py  wecom.yaml  wecom_message.py  wecom_message.yaml  wecom_verify.py  wecom_verify.yaml
extensions/wecom_bot/group/: wecom.yaml
extensions/wecom_bot/readme/: README_ja_JP.md  README_zh_Hans.md
extensions/wecom_bot/utils/: __init__.py  crypto.py
models/aihubmix/: manifest.yaml  pyproject.toml  requirements.txt
models/aihubmix/provider/: aihubmix.yaml
models/aimlapi/: .env.example  PRIVACY.md  README.md  main.py  manifest.yaml  pyproject.toml
models/aimlapi/provider/: aimlapi.py  aimlapi.yaml
models/anthropic/: manifest.yaml  pyproject.toml  requirements.txt
models/anthropic/provider/: anthropic.py  anthropic.yaml
models/anthropic/schemas/: model-schema.json
models/anthropic/tests/: conftest.py  test_llm_call.py  test_sonnet5_parameters.py
models/avian/: README.md  manifest.yaml  pyproject.toml
models/avian/provider/: avian.py  avian.yaml
models/azure_ai_studio/: manifest.yaml  pyproject.toml  requirements.txt
models/azure_ai_studio/provider/: azure_ai_studio.yaml
models/azure_openai/: README.md  manifest.yaml  pyproject.toml  requirements.txt
models/azure_openai/models/: common.py  constants.py
models/azure_openai/provider/: azure_openai.yaml
models/azure_openai/tests/: test_common.py  test_llm.py  test_metadata.py  test_tts.py
models/bedrock/: README.md  manifest.yaml  pyproject.toml  requirements.txt  test_converse_api_simple.py  test_converse_api_support.py
models/bedrock/provider/: bedrock.yaml
models/bedrock/readme/: README_zh_Hans.md
models/bedrock/tests/: conftest.py  test_claude5_cache_config.py  test_claude5_llm_params.py  test_claude5_model_ids.py  test_claude5_refusal.py  test_metadata.py
models/bedrock/utils/: inference_profile.py
models/byteplus/: .env.example  README.md  manifest.yaml  pyproject.toml
models/byteplus/provider/: byteplus.py  byteplus.yaml
models/byteplus/tests/: test_polling_llm.py
models/chuizi/: .difyignore  .env.example  README.md  manifest.yaml  pyproject.toml  requirements.txt
models/chuizi/provider/: chuizi.py  chuizi.yaml
models/cohere/: manifest.yaml  pyproject.toml  requirements.txt
models/cohere/provider/: cohere.yaml
models/deepseek/: README.md  manifest.yaml  pyproject.toml  requirements.txt
models/deerapi/: manifest.yaml  pyproject.toml
models/fireworks/: README.md  manifest.yaml  pyproject.toml  requirements.txt
models/gemini/: .difyignore  .env.example  README.md  TEST_INSTRUCTIONS.md  conftest.py  file_cache.json  manifest.yaml  pyproject.toml  requirements.txt
models/gitee_ai/: manifest.yaml  pyproject.toml  requirements.txt
models/gmicloud/: README.md  manifest.yaml  pyproject.toml  requirements.txt
models/hpc_ai/: .difyignore  .env.example  README.md  manifest.yaml  pyproject.toml
(+3961 files in other folders)
