[project]
name = "aws_s3_storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Refresh the lockfile after dependency changes with: uv lock
dependencies = [
    "dify_plugin>=0.3.0,<0.6.0",
    "boto3",
    "botocore",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
