[project]
name = "azure_blob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin>=0.5.0",
    "azure-storage-blob>=12.20.0",
    "azure-identity>=1.14.0",
    "azure-core>=1.38.2",
    "flask>=3.0.0,<4",
    "python-dateutil>=2.8.0",
    "requests==2.32.5",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
