[project]
name = "azure_blob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin>=0.9.0",
    "azure-storage-blob>=12.29.0",
    "azure-identity>=1.25.3",
    "azure-core>=1.41.0",
    "flask>=3.1.3",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.34.2",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
