[project]
name = "dropbox_datasource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin>=0.5.0",
    "dropbox~=12.0.2",
    "requests",
    "werkzeug",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
