[project]
name = "github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "requests==2.32.5",
    "PyGithub>=1.58.0",
    "markdown>=3.4.0",
    "dify_plugin<0.6.0,>=0.5.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
