[project]
name = "gitlab_datasource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "certifi>=2026.5.20",
    "dify_plugin>=0.9.0",
    "flask>=3.1.3",
    "markdown>=3.10.2",
    "requests>=2.34.2",
    "urllib3>=2.7.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
