[project]
name = "google_cloud_storage_plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Refresh the plugin lockfile with: uv lock
dependencies = [
    "dify_plugin>=0.5.0",
    "google-cloud-storage~=3.7.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
