[project]
name = "google_drive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Refresh the plugin lockfile with: uv lock
dependencies = [
    "dify_plugin>=0.9.0",
    "certifi>=2026.5.20",
    "flask>=3.1.3",
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "google-cloud-storage>=3.10.1",
    "requests>=2.34.2",
    "urllib3>=2.7.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
