[project]
name = "sharepoint_datasource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Refresh the plugin lockfile with: uv lock
dependencies = [
    "dify_plugin>=0.5.0",
    "flask>=3.0.3,<3.1.dev0",
    "requests>=2.32.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
