[project]
name = "aws_bedrock_knowledge_base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Refresh the lockfile with: uv lock
dependencies = [
    "dify_plugin>=0.5.0",
    "boto3~=1.40.50",
    "botocore~=1.40.50",
    "werkzeug>=3.1.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
