[project]
name = "aihubmix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify-plugin<0.6.0,>=0.5.0",
    "httpx>=0.28.1,<0.29.dev0",
    "openai~=2.3.0",
    "google-genai>=1.56.0",
    "anthropic~=0.57.1",
    "pillow~=12.1.1",
    "urllib3>=2.6.3",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
