[project]
name = "aimlapi"
version = "0.1.0"
description = "AI/ML API model provider for Dify"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dify_plugin>=0.9.0",
    "openai>=2.38.0",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
