[project]
name = "aimlapi"
version = "0.1.0"
description = "AI/ML API model provider plugin for Dify"
readme = "README.md"
requires-python = ">=3.12"

# Refresh the lockfile with: uv lock
dependencies = [
    "dify_plugin>=0.9.0",
    "openai>=2.38.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]