[project]
name = "dify-anthropic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify_plugin<0.6.0,>=0.5.0",
    "anthropic~=0.57.1",
    "pillow~=12.1.1",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = [
    "pyrefly>=0.50.0",
    "pytest>=8.0.0",
]
