[project]
name = "dify-anthropic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "anthropic>=0.108.0",
    "dify_plugin>=0.9.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "requests>=2.34.2",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
]
