[project]
name = "avian"
version = "0.1.0"
description = "Avian LLM API provider plugin for Dify"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify_plugin<0.6.0,>=0.5.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
