[project]
name = "azure_ai_studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin>=0.5.0",
    "azure-ai-inference~=1.0.0b8",
    "azure-ai-ml~=1.20.0",
    "azure-identity~=1.16.1",
    "azure-core>=1.38.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
