[project]
name = "azure_ai_studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-ai-ml>=1.33.0",
    "azure-core>=1.41.0",
    "azure-identity>=1.25.3",
    "dify_plugin>=0.9.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
