[project]
name = "azure_openai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "azure-core>=1.41.0",
    "azure-identity>=1.25.3",
    "dify_plugin>=0.9.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "tiktoken>=0.13.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
