[project]
name = "bedrock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin @ git+https://github.com/ryuta-kobayashi-ug/dify-plugin-sdks.git@feat/pass-session-to-model-plugins",
    "boto3>=1.42.42",
    "tiktoken>=0.12.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
