[project]
name = "byteplus"
version = "0.0.1"
description = "SOTA video and image generation model provided by BytePlus"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "dify-plugin>=0.9.1",
  "pydantic>=2.13.0,<3.0.0",
  "volcengine-python-sdk[ark]>=5.0.1,<6.0.0",
]

[dependency-groups]
dev = [
  "pyrefly>=0.52.0",
  "pytest",
  "pyyaml",
]
