[project]
name = "chuizi"
version = "0.1.0"
description = "Chuizi.AI model provider plugin for Dify"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify_plugin>=0.5.0",
    "sniffio==1.3.1",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = [
    "pyrefly>=0.50.0",
    "pytest>=9.0.2",
    "black>=25.11.0",
    "ruff>=0.14.6",
]
