[project]
name = "dify-cohere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin>=0.5.0",
    "cohere~=5.2.4",
    "numpy~=2.2.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
