[project]
name = "dify-cohere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "cohere>=5.2.6,<5.3.0",
    "dify_plugin>=0.9.0",
    "numpy>=2.4.6",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
