[project]
name = "deerapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin>=0.5.0",
    "tiktoken~=0.8.0",
    "openai~=2.3.0",
    "numpy~=1.26.4",
    "pydub~=0.25.1",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
