[project]
name = "gemini-g9cIE8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify-plugin>=0.5.1,<0.6.0",
    "google-genai>=1.60.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.4.1",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "python-dotenv>=1.2.1",
    "Pillow>=12.1.0",
]

[tool.pytest.ini_options]
# Pytest configuration for Gemini plugin tests
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test discovery paths
testpaths = ["models/tests/"]

# Markers
markers = [
    "integration: marks tests as integration tests (requires API key)",
    "unit: marks tests as unit tests (no API key required)"
]

# Logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:Monkey-patching ssl after ssl has already been imported:gevent.monkey.MonkeyPatchWarning"
]

# Coverage options (if using pytest-cov)
# addopts = ["--cov=models/llm", "--cov-report=term-missing", "--cov-report=html"]
