[project]
name = "gitee_ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin>=0.9.0",
    "dashscope>=1.25.18",
    "httpx>=0.28.1",
    "pydub>=0.25.1",
    "requests>=2.34.2",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
