[project]
name = "gmicloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify_plugin>=0.4.0,<0.7.0",
    "openai==2.3.0",
    "requests==2.32.5",
    "yarl==1.22.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
