[project]
name = "hpc-ai"
version = "0.1.0"
description = "HPC-AI model provider for Dify"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify_plugin>=0.5.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.2",
    "ruff>=0.14.6",
]
